# juno-miner

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug_test.sh  test_comparison.cpp  test_debug.sh  test_hash_verification.cpp  test_mining_simple.cpp  test_simple_mine.cpp  verify_block_1583.cpp
src/: config.cpp  config.h  logger.cpp  logger.h  main.cpp  miner.cpp  miner.h  rpc_client.cpp  rpc_client.h  utils.cpp  utils.h
